[gd_scene load_steps=8 format=2]

[ext_resource path="res://Title/Title.gd" type="Script" id=1]
[ext_resource path="res://Title/logo.png" type="Texture" id=2]
[ext_resource path="res://Other/born2bsporty_buttons.tres" type="DynamicFont" id=3]
[ext_resource path="res://Reusable/Effects/Fade.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Animation" id=3]

resource_name = "Appear"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Settings:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( -4, 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 272 ), Vector2( 320, 115 ), Vector2( 320, 130 ) ]
}

[node name="Title" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="." index="0"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 2 )
expand = true
stretch_mode = 0

[node name="Logo" type="CenterContainer" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 32.0
margin_right = -80.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="TextureRect" type="TextureRect" parent="Logo" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_right = 316.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="ButtonsContainer" type="CenterContainer" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -54.5
margin_top = -151.0
margin_right = 54.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="Buttons" type="VBoxContainer" parent="ButtonsContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 101.0
margin_bottom = 143.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Start" type="Button" parent="ButtonsContainer/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 94.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../QUIT")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../SETTINGS")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START"
flat = true
align = 1
_sections_unfolded = [ "Focus", "custom_fonts" ]

[node name="SETTINGS" type="Button" parent="ButtonsContainer/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 94.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Start")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../QUIT")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SETTINGS"
flat = true
align = 1
_sections_unfolded = [ "Focus", "custom_fonts" ]

[node name="QUIT" type="Button" parent="ButtonsContainer/Buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 94.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../SETTINGS")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Start")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "QUIT"
flat = true
align = 1
_sections_unfolded = [ "Focus", "custom_fonts" ]

[node name="Settings" type="CenterContainer" parent="." index="3"]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = 2.0
margin_right = -15.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="Settings" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 145.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Music" type="Button" parent="Settings/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 145.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Close")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Sound")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Music: On"
flat = true
align = 1
_sections_unfolded = [ "Focus" ]

[node name="Sound" type="Button" parent="Settings/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 145.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Music")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Fullscreen")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Sound: On"
flat = true
align = 1
_sections_unfolded = [ "Focus", "custom_fonts" ]

[node name="Fullscreen" type="Button" parent="Settings/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 145.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Sound")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Close")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Fullscreen: On"
flat = true
align = 1
_sections_unfolded = [ "Focus", "custom_fonts" ]

[node name="Close" type="Button" parent="Settings/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 145.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Fullscreen")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Music")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Close"
flat = true
align = 1
_sections_unfolded = [ "Focus", "custom_fonts" ]

[node name="Fade" parent="." index="4" instance=ExtResource( 4 )]

editor/display_folded = true
visible = false

[node name="SettingsAnim" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Appear = SubResource( 3 )
blend_times = [  ]

[connection signal="pressed" from="ButtonsContainer/Buttons/Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="ButtonsContainer/Buttons/SETTINGS" to="." method="_on_SETTINGS_pressed"]

[connection signal="pressed" from="ButtonsContainer/Buttons/QUIT" to="." method="_on_QUIT_pressed"]

[connection signal="pressed" from="Settings/VBoxContainer/Music" to="." method="_on_Music_pressed"]

[connection signal="pressed" from="Settings/VBoxContainer/Sound" to="." method="_on_Sound_pressed"]

[connection signal="pressed" from="Settings/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]

[connection signal="pressed" from="Settings/VBoxContainer/Close" to="." method="_on_Close_pressed"]

[connection signal="animation_finished" from="Fade/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


[editable path="Fade"]
